--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <img src="img/iphone.jpg" alt="iPhone 14" width="150">
             <h2>iPhone 14</h2>
             <p>Price: $999</p>
-            <button onclick="buyNow('iPhone 14', 999, 'img/iphone.jpg')">Buy Now</button>
+            <button onclick="buyNow('iPhone 14', 999, '../img/iphone.jpg')">Buy Now</button>
         </div>
 
         <div class="product">
             <img src="img/galaxy23.jpg" alt="Samsung Galaxy S23" width="150">
             <h2>Samsung Galaxy S23</h2>
             <p>Price: $899</p>
-            <button onclick="buyNow('Samsung Galaxy S23', 899, 'img/galaxy23.jpg')">Buy Now</button>
+            <button onclick="buyNow('Samsung Galaxy S23', 899, '../img/galaxy23.jpg')">Buy Now</button>
         </div>
 
     </div>
@@ -29,4 +29,5 @@
     <script src="js/items.js"></script>
 </body>
 </html>
+
 
